# rftool

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/com/tools/rftool/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BandPass.h  CMakeLists.txt  ColorMap.h  ComplexNumber.h  FFTLib.cpp  FFTLib.h  FftThread.cpp  FftThread.h  Optional.h  RecorderThread.cpp  RecorderThread.h  SignalProcessing.cpp  ThreadSafeBucket.h  dsp-filter.cpp  dsp-filter.h  fft-lib.cpp  fft-lib.h  fft-thread.cpp  fft-thread.h  sdr-lib.cpp  sdr-lib.h  signalanalysis.cpp  signalprocessing.cpp  signalprocessing.h
app/src/main/cpp/fftw/build-lnx/: CTestTestfile.cmake  bench  config.h
app/src/main/cpp/include/: BandPass.h  ColorMap.h  FmDemodManager.h  RecorderThread.h  SoundPlayer.h  common.h  fm-demod.h  sdr-lib.h
app/src/main/cpp/include/fft/: FFTLib.h  FftThread.h
app/src/main/cpp/librtlsdr/include/: rtl-sdr.h
app/src/main/cpp/librtlsdr/src/: librtlsdr.c
app/src/main/cpp/libusb-1.0.26/android-build/arm64-v8a/: dpfp  fxload  listdevs  stress
app/src/main/cpp/libusb-1.0.26/android-build/armeabi-v7a/: dpfp  dpfp_threaded  fxload  listdevs  stress
app/src/main/cpp/libusb-1.0.26/android-build/x86/: dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  xusb
app/src/main/cpp/libusb-1.0.26/android-build/x86_64/: dpfp  dpfp_threaded  listdevs
app/src/main/cpp/libusb/android-build/arm64-v8a/: dpfp_threaded  hotplugtest  sam3u_benchmark  xusb
app/src/main/cpp/libusb/android-build/armeabi-v7a/: hotplugtest  sam3u_benchmark  xusb
app/src/main/cpp/libusb/android-build/x86/: dpfp  stress
app/src/main/cpp/libusb/android-build/x86_64/: fxload  hotplugtest  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/libs/arm64-v8a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/libs/armeabi-v7a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/libs/x86/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/libusb/libs/x86_64/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
app/src/main/cpp/readerwriterqueue/: atomicops.h  readerwritercircularbuffer.h  readerwriterqueue.h
app/src/main/cpp/src/: FmDemodManager.cpp  RecorderThread.cpp  SoundPlayer.cpp  fm-demod.cpp  sdr-lib.cpp  signalanalysis.cpp
app/src/main/cpp/src/fft/: FFTLib.cpp  FftThread.cpp
app/src/main/java/com/tools/rftool/: MainActivity.kt  RfToolApplication.kt
app/src/main/java/com/tools/rftool/adapter/: ItemDetailsViewHolder.kt  ItemKeyRecyclerAdapter.kt  MainActivityPagerAdapter.kt  RecordingsRecyclerAdapter.kt  SelectionRecyclerAdapter.kt  SignalAnalysisViewAdapter.kt  SignalDataPoint.kt
app/src/main/java/com/tools/rftool/data/: DataRange.kt
app/src/main/java/com/tools/rftool/fft/: Fft.kt
app/src/main/java/com/tools/rftool/fragment/: FftFragment.kt  FmPlaybackFragment.kt  RecordingDetailsFragment.kt  RecordingListFragment.kt  RecordingsFragment.kt  SignalFragment.kt
app/src/main/java/com/tools/rftool/model/: Recording.kt
app/src/main/java/com/tools/rftool/permissions/: UsbPermissionsHelper.kt
app/src/main/java/com/tools/rftool/repository/: AppConfigurationRepository.kt  RepositoryModule.kt
app/src/main/java/com/tools/rftool/rtlsdr/: IQ.kt  Recorder.kt  RtlSdr.kt
app/src/main/java/com/tools/rftool/service/: FileSystemWatcherService.kt
app/src/main/java/com/tools/rftool/signalprocessing/: SignalProcessing.kt
app/src/main/java/com/tools/rftool/spectrogram/: FftTimeSeriesSpectrogramAdapter.kt  Spectrogram.kt  SpectrogramAdapter.kt  SpectrogramBitmap.kt
app/src/main/java/com/tools/rftool/task/: RecordedSignalLoadTask.kt
app/src/main/java/com/tools/rftool/ui/: DepthPageTransformer.kt  SignalAnalysisView.kt
app/src/main/java/com/tools/rftool/viewmodel/: RecordingsViewModel.kt  SdrDeviceViewModel.kt
app/src/main/res/drawable/: ic_baseline_delete_sweep_24.xml  ic_baseline_menu_24.xml  ic_baseline_radio_24.xml  ic_baseline_stop_24.xml  ic_baseline_usb_24.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_fft.xml  fragment_fm_playback.xml  fragment_recording_details.xml  fragment_recording_list.xml  fragment_recordings.xml  fragment_signal.xml  navigation_side_panel.xml  recyclerview_item_recording.xml
app/src/main/res/menu/: activity_main_menu.xml  bottom_menu.xml  fragment_recording_details.xml  fragment_recording_list_actionmode.xml
app/src/main/res/values/: bools.xml  colors.xml  floats.xml  integers.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml  file_paths.xml
app/src/test/java/com/tools/rftool/: AppConfigValidFftTest.kt  ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
signalanalysis/: build.gradle
signalanalysis/src/androidTest/: AndroidManifest.xml
signalanalysis/src/androidTest/java/com/tools/signalanalysis/: ExampleInstrumentedTest.kt  SampleData.kt  SignalAnalysisViewInstrumentedTest.kt
signalanalysis/src/main/: AndroidManifest.xml
signalanalysis/src/main/cpp/: CMakeLists.txt  SignalDataPoint.h  ThreeBuckets.h  signalanalysis.cpp  signalanalysisview.cpp  signalanalysisview.h
signalanalysis/src/main/cpp/fftw/: Android.mk  CMakeLists.txt
signalanalysis/src/main/cpp/fftw/build-lnx/: CMakeCache.txt  FFTW3LibraryDepends.cmake  Makefile  cmake_install.cmake
signalanalysis/src/main/java/com/tools/signalanalysis/adapter/: SignalDataPoint.kt
signalanalysis/src/main/java/com/tools/signalanalysis/data/: DataRange.kt  SignalAnalysisViewAdapter.kt
signalanalysis/src/main/res/layout/: activity_test_signalanalysisview.xml
signalanalysis/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
signalanalysis/src/test/java/com/tools/signalanalysis/: DownsamplingTest.kt
(+48 files in other folders)
